Fix infer_single_tomo to output Å coordinates

--- a/motor_det/tests/test.ipynb
+++ b/motor_det/tests/test.ipynb
@@ -348,8 +348,9 @@
     "    iou_thr     = 0.25,\n",
     "    device      = DEVICE,\n",
     ")\n",
-    "rank_zero_info(f\"Inference done in {time.time() - t0:0.1f}s\")\n",
-    "\n",
+ "rank_zero_info(f\"Inference done in {time.time() - t0:0.1f}s\")\n",
+ "# returned coordinates are in Å\n",
+ "\n",
     "# 3) numpy 결과 → DataFrame으로 변환 -------------------------------\n",
     "# arr.shape == (0,3) 혹은 (1,3)\n",
     "if arr.size == 0:\n",
